<resources>
    <string name="app_name">Амбулаторная помощь при COVID19</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes_button">Да</string>
    <string name="no_button">Нет</string>
    <string name="result_button">Рекомендации</string>
    <string name="back_button">Назад</string>
    <string name="app_name_title1">Программа поддержки принятия решений</string>
    <string name="app_name_title2">\"Амбулаторная помощь при COVID19\"</string>

    <!--  About fragment  -->
    <string name="about_title">О приложении</string>
    <string name="about_name1">Программа поддержки принятия решений</string>
    <string name="about_name2">\"Амбулаторная помощь при COVID19\"</string>
    <string name="authors"><b>Автор проекта:</b> Бонцевич Р.А. - к.м.н., доцент, клин. фармаколог НИУ "Белгородский гос. университет", каф. фармакологии и клинической фармакологии (<a href = "mailto:bontsevich@bsu.edu.ru">bontsevich@bsu.edu.ru</a>)</string>
    <string name="developers"><b>Разработчики:</b> Бегенджев Довлет Батырович, Щепилов Юрий Васильевич - бакалавры каф. МиПОИС, НИУ "Белгородский гос. университет"</string>
    <string name="about_version"><b>Версия:</b> 1.5 от 11.02.2022 на основании ВМР-№14 МЗ РФ</string>

    <!--  Instructions fragment  -->
    <string name="instructions_title">Инструкция</string>
    <string name="instructions_description">После нажатия кнопки "Начать", вам предлагается ответить на вопросы, после чего программа анализирует данные и, в соответствии с условиями алгоритма и анализом сочетания ответов ("и/или/нет"), выводит стандартизованные заключительные выводы (формулировки).</string>

    <string name="about_button">О приложении</string>
    <string name="instructions_button">Инструкция</string>
    <string name="start_button">Начать</string>
</resources>