<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/heart_mask" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_title"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"/>

    <Button
        android:id="@+id/instructions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_button"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>